# parclab-hsu.github.io

./: 404.html  DESIGN.md  README.md  contact.html  courses.html  index.html  news.html  people.html  projects.html  publications.html  research.html  sitemap.xml  style.css
contact/: index.html
courses/: index.html
courses-src/c-programming-202602/: mkdocs.yml
courses-src/c-programming-202602/docs/: advanced-notes.md  ai-literacy.md  design-problems.md  exam-prep.md  (+22 more)
courses-src/c-programming-202602/docs/code/ros2/stella_n2_bridge/: CMakeLists.txt  index.md  package.xml
courses-src/c-programming-202602/docs/code/ros2/stella_n2_bridge/include/stella_n2_bridge/: scan_logic.h
courses-src/c-programming-202602/docs/code/ros2/stella_n2_bridge/src/: stella_n2_bridge.cpp
courses-src/physical-ai-202602/: mkdocs.yml
courses/202602/: index.html
homepage-src/: build.sh  mkdocs.yml
homepage-src/docs/: contact.md  index.md  news.md  people.md  projects.md  publications.md  research.md
news/: index.html
people/: index.html
projects/: index.html
publications/: index.html
research/: index.html
search/: search_index.json
stylesheets/: extra.css
workshop-hansung/: 404.html  index.html  sitemap.xml
workshop-hansung/01-intro/: index.html
workshop-hansung/02-setup/: index.html
workshop-hansung/03-data-analysis/: index.html
workshop-hansung/04-build-deck/: index.html
workshop-hansung/05-facilitation-qna/: index.html
workshop-hansung/06-prompt-cards/: index.html
workshop-hansung/assets/: edit-gate.css  edit-gate.js
workshop-hansung/search/: search_index.json
workshop-hansung/slide/: README.md  app.js  index.html  styles.css
(+95 files in other folders)
