<?xml version="1.0"?>
<package format="3">
  <name>stella_n2_bridge</name>
  <version>0.1.0</version>
  <description>C logic based ROS2 bridge example for C programming course.</description>
  <maintainer email="kblee@hansung.ac.kr">PARC Lab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
